Misc simplifications, including some that use Java11 APIs
PiperOrigin-RevId: 448332519